newtype-tools/tests/trybuild/struct-tuple.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/trybuild/struct-tuple.rs:2:9
  |
2 | struct N(u64, u64);
  |         ^^^^^^^^^^
